--- a/editor.html
+++ b/editor.html
@@ -63,6 +63,12 @@ a:hover{color:var(--color-text-strong); border-bottom-color:var(--color-text-str
   padding:10px 12px; font-size:14px; font-family:inherit; background:var(--color-background); color:var(--color-text);
 }
 textarea{min-height:420px; resize:vertical; border-radius:var(--radius-xl); padding:16px}
+.card textarea{
+  border:none;
+  border-radius:0;
+  box-shadow:none;
+  min-height:420px;
+}
 .hint{font-size:12px; color:var(--color-meta); font-family:var(--font-family-mono)}
 .row{display:flex; gap:12px; flex-wrap:wrap}
 .row .field{flex:1; min-width:220px}
