--- a/editor.html
+++ b/editor.html
@@ -3,118 +3,109 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>New Dynamic Journal</title>
+<link rel="stylesheet" href="css/common.css" />
 <style>
-:root{
-  --color-background:#ffffff;
-  --color-text:#333333;
-  --color-text-strong:#000000;
-  --color-text-subtle:#555555;
-  --color-meta:#888888;
-  --color-border:#eeeeee;
-  --color-link-underline:#bbbbbb;
-  --color-code-bg:#f7f7f7;
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  max-width: 100%;
+}
 
-  --font-family-sans-latin:"Inter","SF Pro Text",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-  --font-family-sans-cjk:"HarmonyOS Sans SC","Source Han Sans SC","Noto Sans CJK SC","PingFang SC","Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei","WenQuanYi Zen Hei",sans-serif;
-  --font-family-sans:var(--font-family-sans-latin),var(--font-family-sans-cjk);
-  --font-family-mono:"JetBrains Mono","SFMono-Regular",Consolas,"Liberation Mono",Menlo,Courier,monospace;
+.header {
+  flex-shrink: 0;
+  margin: 0;
+  padding: 18px 20px;
+  border-bottom: 1px solid var(--color-border);
+}
 
-  --radius-xl:18px;
-  --shadow: 0 20px 50px rgba(15, 15, 15, 0.12);
+.card {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  border: none;
+  border-radius: 0;
+  overflow: hidden;
 }
-*{box-sizing:border-box}
-html,body{height:100%}
-body{
-  margin:0;
-  font-family:var(--font-family-sans);
-  background:var(--color-background);
-  color:var(--color-text);
-  -webkit-font-smoothing:antialiased;
-  text-rendering:optimizeLegibility;
+
+.card-top {
+  flex-shrink: 0;
+  padding: 10px 14px;
 }
-a{color:var(--color-text); text-decoration:none; border-bottom:1px solid var(--color-link-underline)}
-a:hover{color:var(--color-text-strong); border-bottom-color:var(--color-text-strong)}
-.container{max-width:860px; margin:0 auto; padding:28px 22px 24px}
-.header{
-  display:flex; align-items:baseline; justify-content:space-between;
-  padding-bottom:18px; border-bottom:1px solid var(--color-border);
-  margin-bottom:18px; gap:14px;
+
+.card textarea {
+  flex: 1;
+  min-height: 0;
+  border: none;
+  border-radius: 0;
+  padding: 16px;
+  font-size: 14px;
 }
-.brand{display:flex; flex-direction:column; gap:4px}
-.title{font-size:18px; font-weight:600; margin:0; color:var(--color-text-strong); letter-spacing:.04em}
-.subtitle{margin:0; font-size:12px; color:var(--color-meta); letter-spacing:.12em; text-transform:uppercase; font-family:var(--font-family-mono)}
-.actions{display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end}
-.btn{
-  display:inline-flex; align-items:center; justify-content:center;
-  padding:9px 14px; border-radius:999px;
-  border:1px solid transparent; background:transparent;
-  color:var(--color-text); cursor:pointer;
-  font-size:13px; letter-spacing:.06em; text-transform:uppercase;
-  transition:transform .18s ease, background-color .18s ease, border-color .18s ease, box-shadow .18s ease, color .18s ease;
+
+.footer {
+  flex-shrink: 0;
+  /* let global CSS handle padding/height to keep consistent across pages */
 }
-.btn:hover{transform:translateY(-1px); border-color:var(--color-border); background:var(--color-code-bg)}
-.btn:focus-visible{outline:2px solid var(--color-text-subtle); outline-offset:2px}
-.btn-primary{border-color:var(--color-text-strong)}
-.btn-primary:hover{background:var(--color-text-strong); color:var(--color-background); box-shadow:0 8px 20px rgba(15,15,15,.12)}
-.field{display:flex; flex-direction:column; gap:6px; margin:14px 0}
-.label{font-size:11px; letter-spacing:.16em; text-transform:uppercase; color:var(--color-meta); font-family:var(--font-family-mono)}
-.input, textarea{
-  width:100%; border:1px solid var(--color-border); border-radius:14px;
-  padding:10px 12px; font-size:14px; font-family:inherit; background:var(--color-background); color:var(--color-text);
+
+#wordCount {
+  font-weight: 500;
 }
-textarea{min-height:420px; resize:vertical; border-radius:var(--radius-xl); padding:16px}
-.card textarea{
-  border:none;
-  border-radius:0;
-  box-shadow:none;
-  min-height:420px;
-}
-.hint{font-size:12px; color:var(--color-meta); font-family:var(--font-family-mono)}
-.row{display:flex; gap:12px; flex-wrap:wrap}
-.row .field{flex:1; min-width:220px}
-.footer{display:flex; justify-content:space-between; align-items:center; gap:12px; margin-top:14px; color:var(--color-meta); font-size:12px; font-family:var(--font-family-mono)}
-.badge{display:inline-flex; align-items:center; gap:8px}
-.status-ok{color:var(--color-text-subtle)}
-.status-warn{color:#b45309}
-.status-err{color:#dc2626}
-.card{border:1px solid var(--color-border); border-radius:var(--radius-xl); overflow:hidden}
-.card-top{padding:12px 14px; border-bottom:1px solid var(--color-border); background:rgba(255,255,255,.9); display:flex; justify-content:space-between; gap:10px; flex-wrap:wrap}
-@media (max-width:520px){
-  .container{padding:18px 14px}
-  textarea{min-height:360px}
-  .actions{justify-content:flex-start}
+
+.shortcuts-hint {
+  font-size: 11px;
+  color: var(--color-meta);
+  margin-top: 4px;
 }
 </style>
-
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <div class="brand">
-        <h1 class="title">New Dynamic</h1>
-        <p class="subtitle" id="fileHint">YYYY-MM-DD.md → src/content/posts/dynamic/journals/</p>
-      </div>
-      <div class="actions">
-        <button class="btn" id="openSettings">设置</button>
-        <button class="btn" id="clearDraft">清空</button>
-        <button class="btn btn-primary" id="publish">发表（模拟）</button>
+      <div style="display: flex; align-items: baseline; justify-content: space-between; gap: 14px;">
+        <div class="brand">
+          <h1 class="title">New Dynamic</h1>
+          <p class="subtitle" id="fileHint">YYYY-MM-DD.md → src/content/posts/dynamic/journals/</p>
+        </div>
+        <div class="actions" style="display:flex; gap:8px; align-items:center;">
+          <button class="btn btn-primary lg" id="publishAndPush" title="发表并推送">发表并推送</button>
+        </div>
       </div>
     </div>
 
     <div class="card">
       <div class="card-top">
-        <div class="hint" id="draftState">草稿：本地自动保存</div>
-        <div class="hint" id="clock"></div>
+        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px;">
+          <div>
+            <div class="hint" id="draftState">草稿：本地自动保存</div>
+          </div>
+          <div class="hint" id="clock"></div>
+        </div>
       </div>
-      <textarea id="editor" placeholder="写点什么… 支持 Markdown 原生语法（图片链接、表格等）"></textarea>
+      <textarea 
+        id="editor" 
+        placeholder="写点什么… 支持 Markdown 原生语法（图片链接、表格等）"
+        spellcheck="true"
+      ></textarea>
     </div>
 
     <div class="footer">
-      <div class="badge"><span>状态：</span><span id="status" class="status-ok">就绪</span></div>
-      <div class="hint">UI 对齐站点 style.css 变量（白底、细边框、胶囊按钮）</div>
+      <div class="footer-left">
+        <div class="badge">
+          <span>状态：</span>
+          <span id="status" class="status-ok">就绪</span>
+        </div>
+        <button id="clearDraft" class="btn-text btn-text-danger" title="清空" aria-label="清空">清空</button>
+      </div>
+      <div class="footer-center">
+      </div>
+      <div class="footer-right">
+        <div class="hint" id="wordCount">0 字符 / 0 字</div>
+        <button id="openSettings" class="icon-only" title="设置" aria-label="设置">⚙</button>
+      </div>
     </div>
   </div>
-
-<script src="editor.js"></script>
+<script type="module" src="js/editor.js"></script>
 </body>
 </html>
