--- a/popup.html
+++ b/popup.html
@@ -3,98 +3,47 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Deepwhite Dynamic Journal</title>
+<link rel="stylesheet" href="css/common.css" />
 <style>
-:root{
-  --color-background:#ffffff;
-  --color-text:#333333;
-  --color-text-strong:#000000;
-  --color-text-subtle:#555555;
-  --color-meta:#888888;
-  --color-border:#eeeeee;
-  --color-link-underline:#bbbbbb;
-  --color-code-bg:#f7f7f7;
+.container {
+  padding: 20px 18px 18px;
+  max-width: 420px;
+}
 
-  --font-family-sans-latin:"Inter","SF Pro Text",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-  --font-family-sans-cjk:"HarmonyOS Sans SC","Source Han Sans SC","Noto Sans CJK SC","PingFang SC","Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei","WenQuanYi Zen Hei",sans-serif;
-  --font-family-sans:var(--font-family-sans-latin),var(--font-family-sans-cjk);
-  --font-family-mono:"JetBrains Mono","SFMono-Regular",Consolas,"Liberation Mono",Menlo,Courier,monospace;
+.header {
+  margin-bottom: 20px;
+  padding-bottom: 16px;
+}
 
-  --radius-xl:18px;
-  --shadow: 0 20px 50px rgba(15, 15, 15, 0.12);
+.btn {
+  width: 100%;
+  justify-content: center;
 }
-*{box-sizing:border-box}
-html,body{height:100%}
-body{
-  margin:0;
-  font-family:var(--font-family-sans);
-  background:var(--color-background);
-  color:var(--color-text);
-  -webkit-font-smoothing:antialiased;
-  text-rendering:optimizeLegibility;
-}
-a{color:var(--color-text); text-decoration:none; border-bottom:1px solid var(--color-link-underline)}
-a:hover{color:var(--color-text-strong); border-bottom-color:var(--color-text-strong)}
-.container{max-width:860px; margin:0 auto; padding:28px 22px 24px}
-.header{
-  display:flex; align-items:baseline; justify-content:space-between;
-  padding-bottom:18px; border-bottom:1px solid var(--color-border);
-  margin-bottom:18px; gap:14px;
-}
-.brand{display:flex; flex-direction:column; gap:4px}
-.title{font-size:18px; font-weight:600; margin:0; color:var(--color-text-strong); letter-spacing:.04em}
-.subtitle{margin:0; font-size:12px; color:var(--color-meta); letter-spacing:.12em; text-transform:uppercase; font-family:var(--font-family-mono)}
-.actions{display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end}
-.btn{
-  display:inline-flex; align-items:center; justify-content:center;
-  padding:9px 14px; border-radius:999px;
-  border:1px solid transparent; background:transparent;
-  color:var(--color-text); cursor:pointer;
-  font-size:13px; letter-spacing:.06em; text-transform:uppercase;
-  transition:transform .18s ease, background-color .18s ease, border-color .18s ease, box-shadow .18s ease, color .18s ease;
-}
-.btn:hover{transform:translateY(-1px); border-color:var(--color-border); background:var(--color-code-bg)}
-.btn:focus-visible{outline:2px solid var(--color-text-subtle); outline-offset:2px}
-.btn-primary{border-color:var(--color-text-strong)}
-.btn-primary:hover{background:var(--color-text-strong); color:var(--color-background); box-shadow:0 8px 20px rgba(15,15,15,.12)}
-.field{display:flex; flex-direction:column; gap:6px; margin:14px 0}
-.label{font-size:11px; letter-spacing:.16em; text-transform:uppercase; color:var(--color-meta); font-family:var(--font-family-mono)}
-.input, textarea{
-  width:100%; border:1px solid var(--color-border); border-radius:14px;
-  padding:10px 12px; font-size:14px; font-family:inherit; background:var(--color-background); color:var(--color-text);
-}
-textarea{min-height:420px; resize:vertical; border-radius:var(--radius-xl); padding:16px}
-.hint{font-size:12px; color:var(--color-meta); font-family:var(--font-family-mono)}
-.row{display:flex; gap:12px; flex-wrap:wrap}
-.row .field{flex:1; min-width:220px}
-.footer{display:flex; justify-content:space-between; align-items:center; gap:12px; margin-top:14px; color:var(--color-meta); font-size:12px; font-family:var(--font-family-mono)}
-.badge{display:inline-flex; align-items:center; gap:8px}
-.status-ok{color:var(--color-text-subtle)}
-.status-warn{color:#b45309}
-.status-err{color:#dc2626}
-.card{border:1px solid var(--color-border); border-radius:var(--radius-xl); overflow:hidden}
-.card-top{padding:12px 14px; border-bottom:1px solid var(--color-border); background:rgba(255,255,255,.9); display:flex; justify-content:space-between; gap:10px; flex-wrap:wrap}
-@media (max-width:520px){
-  .container{padding:18px 14px}
-  textarea{min-height:360px}
-  .actions{justify-content:flex-start}
-}
-</style>
 
-<style>
-.container{padding:14px 14px 12px; max-width:420px}
+#msg {
+  margin-top: 12px;
+  text-align: center;
+  min-height: 20px;
+}
 </style>
 </head>
 <body>
 <div class="container">
-  <div class="header" style="margin-bottom:12px;padding-bottom:12px">
+  <div class="header">
     <div class="brand">
       <h1 class="title">Deepwhite</h1>
       <p class="subtitle">dynamic journal</p>
     </div>
   </div>
-  <button id="open" class="btn btn-primary" style="width:100%">打开浮窗编辑器</button>
-  <p id="msg" class="hint" style="margin:10px 2px 0">点击按钮打开</p>
+  
+  <button id="open" class="btn btn-primary">打开浮窗编辑器</button>
+  <p id="msg" class="hint"></p>
+  
+  <div class="footer" style="margin-top: 20px; justify-content: center;">
+    <div class="hint">点击按钮打开编辑器窗口</div>
+  </div>
 </div>
-<script src="popup.js"></script>
+<script type="module" src="js/popup.js"></script>
 </body>
 </html>
