chore: push all local changes

--- a/options.html
+++ b/options.html
@@ -26,29 +26,28 @@
         <button class="btn btn-primary" id="save">保存</button>
       </div>
     </div>
+    <div style="padding:10px 16px; display:flex; align-items:center; gap:12px;">
+      <div>
+        <div class="label">本地保存文件夹</div>
+        <div id="folderName" class="hint">未选择</div>
+      </div>
+      <div style="margin-left:auto; display:flex; gap:8px;">
+        <button class="btn" id="pickFolder">选择文件夹</button>
+        <button class="btn" id="clearFolder">清除</button>
+      </div>
+    </div>
 
     <div class="row">
       <div class="field">
-        <div class="label">Repo Owner</div>
-        <input 
-          class="input" 
-          id="repoOwner" 
-          placeholder="FXnadu" 
+        <div class="label">Repository</div>
+        <input
+          class="input"
+          id="repoUrl"
+          placeholder="owner/repo 或 https://github.com/owner/repo"
           autocomplete="off"
           required
         />
-        <div class="hint">GitHub 仓库所有者用户名</div>
-      </div>
-      <div class="field">
-        <div class="label">Repo Name</div>
-        <input 
-          class="input" 
-          id="repoName" 
-          placeholder="deepwhite-11ty" 
-          autocomplete="off"
-          required
-        />
-        <div class="hint">GitHub 仓库名称</div>
+        <div class="hint">仓库地址（支持 owner/repo、HTTPS URL 或 git@github.com:owner/repo.git）</div>
       </div>
     </div>
 
@@ -73,29 +72,50 @@
           autocomplete="off"
           required
         />
-        <div class="hint">动态页集合来源目录：src/content/posts/dynamic/journals（文件名 YYYY-MM-DD.md）</div>
+        <div class="hint">仓库内目标目录（文件名 YYYY-MM-DD.md）</div>
       </div>
     </div>
 
     <div class="row">
-      <div class="field">
-        <div class="label">Commit Prefix</div>
-        <input 
-          class="input" 
-          id="commitPrefix" 
-          placeholder="dynamic:" 
-          autocomplete="off"
-        />
-        <div class="hint">Git 提交信息前缀</div>
+      <div class="field" style="display:flex; align-items:center; gap:12px;">
+        <label style="display:flex; align-items:center; gap:8px;">
+          <input type="checkbox" id="pushToGithub" />
+          <span>推送到 GitHub</span>
+        </label>
+        <div class="hint">开启后每次发表会向远程仓库推送</div>
       </div>
-      <div class="field">
-        <div class="label">Mode</div>
-        <select class="input" id="mode">
-          <option value="simulate">模拟（不推送）</option>
-          <option value="local-only">仅本地保存</option>
-          <option value="local-and-push">本地保存并推送</option>
-        </select>
-        <div class="hint">选择发表行为：仅模拟、本地保存，或本地保存并推送到 GitHub。</div>
+    </div>
+
+    <div style="margin-top:8px;">
+      <button id="advancedToggle" class="btn">高级选项</button>
+      <div id="advancedSection" style="display:none; margin-top:10px;">
+        <div class="row">
+          <div class="field">
+            <div class="label">Commit Prefix</div>
+            <input 
+              class="input" 
+              id="commitPrefix" 
+              placeholder="dynamic:" 
+              autocomplete="off"
+            />
+            <div class="hint">Git 提交信息前缀（可选）</div>
+          </div>
+          <div class="field">
+            <div class="label">GitHub Token</div>
+            <input 
+              class="input" 
+              id="githubToken" 
+              placeholder="个人访问令牌（PAT）" 
+              autocomplete="off"
+              type="password"
+            />
+            <div class="hint">用于推送到 GitHub（仅在开启推送时需要）。</div>
+          </div>
+        </div>
+        <div style="margin-top:8px;">
+          <button class="btn" id="testConnection">测试连接</button>
+          <span id="testResult" class="hint" style="margin-left:10px;"></span>
+        </div>
       </div>
     </div>
 
