--- a/editor.html
+++ b/editor.html
@@ -193,6 +193,18 @@
   }
 }
 
+/* Icon button base alignment (use with .icon-only) */
+.icon-only {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  line-height: 1;
+  padding: 0 6px;
+}
+
+/* PicGo test button character styling (removed when button deleted) */
+
 </style>
 <style>
 /* Image gallery at editor bottom */
@@ -200,8 +212,9 @@
   border-top: 1px dashed var(--color-border);
   padding: 10px;
   display: flex;
-  gap: 8px;
-  align-items: center;
+  gap: 12px;
+  align-items: flex-start; /* allow items to align from top for consistent thumbnail grid */
+  flex-wrap: wrap; /* allow thumbnails to wrap to new rows instead of overflowing */
   overflow-x: auto;
   background: rgba(250,250,250,0.6);
 }
@@ -241,7 +254,105 @@
 .image-item a {
   color: inherit;
   text-decoration: none;
+  /* override global anchor underline for image links */
+  border-bottom: none;
 }
+</style>
+<style>
+/* Inline interactive empty-state styles to ensure they win over common.css */
+.image-gallery {
+  transition: border-top-color 0.12s ease, background 0.12s ease;
+  position: relative; /* allow upload panel to be absolutely positioned (overlay) */
+}
+.image-gallery:hover {
+  border-top-color: var(--color-text-subtle);
+}
+.image-gallery.empty {
+  cursor: pointer;
+  padding: 6px 10px; /* small blank area before opening drawer */
+  justify-content: center;
+  min-height: 22px;
+  align-items: center;
+}
+.image-gallery .empty-placeholder {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 100%;
+  padding: 8px 0;
+}
+.image-gallery.open .empty-placeholder {
+  display: flex;
+}
+.image-gallery.open .empty-placeholder {
+  display: flex;
+}
+.image-gallery .empty-box {
+  width: 160px;
+  height: 100px;
+  border: 2px dashed var(--color-border);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-text-subtle);
+  background: transparent;
+  transition: border-color 0.12s ease, color 0.12s ease, background 0.12s ease;
+}
+.image-gallery .empty-box:hover {
+  border-color: var(--color-text-strong);
+  color: var(--color-text-strong);
+  background: rgba(0,0,0,0.02);
+}
+.image-gallery .add-symbol {
+  font-size: 36px;
+  line-height: 1;
+}
+.image-gallery .description {
+  margin-top: 12px;
+  color: var(--color-text-subtle);
+  font-size: 13px;
+}
+.image-gallery .upload-panel {
+  /* overlay drawer: positioned above the gallery without affecting layout */
+  display: flex;
+  width: 100%;
+  padding: 12px;
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 100%;
+  background: rgba(255,255,255,0.98);
+  box-shadow: 0 -6px 18px rgba(0,0,0,0.06);
+  border-top: none;
+  /* start hidden but present for transitions */
+  opacity: 0;
+  transform: translateY(12px);
+  pointer-events: none;
+  transition: transform 220ms cubic-bezier(.2,.9,.2,1), opacity 160ms ease;
+}
+.image-gallery .upload-panel #uploadStatus {
+  color: var(--color-text-subtle);
+  font-size: 13px;
+}
+.image-gallery.open .upload-panel {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+/* small trigger strip shown when empty and closed */
+.image-gallery .empty-trigger {
+  width: 100%;
+  height: 18px;
+  background: transparent;
+}
+</style>
 </style>
 <style>
 /* Image preview modal */
@@ -321,6 +432,7 @@
       </div>
       <div class="footer-right">
         <div class="hint" id="wordCount">0 字符 / 0 字</div>
+        <!-- PicGo 测试按钮已删除以保持页面简洁；如需恢复，请在编辑器模板中添加相应按钮和逻辑 -->
         <button id="openSettings" class="icon-only" title="设置" aria-label="设置">⚙</button>
       </div>
     </div>
