--- a/popup.html
+++ b/popup.html
@@ -44,6 +44,7 @@
     <div class="hint">点击按钮打开编辑器窗口</div>
   </div>
 </div>
+<script src="js/windowManager.js"></script>
 <script type="module" src="js/popup.js"></script>
 </body>
 </html>
