--- a/editor.html
+++ b/editor.html
@@ -5,426 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>New Dynamic Journal</title>
 <link rel="stylesheet" href="css/common.css" />
-<style>
-.container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  max-width: 100%;
-}
-
-.header {
-  flex-shrink: 0;
-  margin: 0;
-  padding: 18px 20px;
-  border-bottom: 1px solid var(--color-border);
-  position: relative;
-}
-
-.card {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  border: none;
-  border-radius: 0;
-  overflow: hidden;
-}
-
-.card-top {
-  flex-shrink: 0;
-  padding: 10px 14px;
-}
-
-.card textarea {
-  flex: 1;
-  min-height: 0;
-  border: none;
-  border-radius: 0;
-  padding: 16px;
-  font-size: 14px;
-  resize: none;
-}
-
-.editor-wrapper {
-  position: relative;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  min-height: 0;
-  overflow: hidden;
-}
-.editor-wrapper .highlight {
-  position: absolute;
-  inset: 0;
-  padding: 16px;
-  margin: 0;
-  pointer-events: none;
-  white-space: pre-wrap;
-  word-break: break-word;
-  color: inherit;
-  font-size: 14px;
-  line-height: 1.4;
-  font-family: inherit;
-  /* Slightly dim default text so tokens stand out */
-  color: var(--color-fg, #111);
-}
-.editor-wrapper textarea {
-  position: relative;
-  background: transparent;
-  color: transparent; /* hide plain text so highlight layer shows through */
-  /* NOTE: removed `text-shadow` (previously used to render textarea text via shadow).
-     That approach forces color glyphs (emoji) to render as monochrome. The overlay
-     highlight layer now renders visible text (including colored emoji), while the
-     textarea keeps focus/caret. */
-  caret-color: var(--color-fg, #111); /* caret remains visible */
-  z-index: 2;
-  resize: none;
-  padding: 16px;
-  border: none;
-  outline: none;
-  font-size: 14px;
-  line-height: 1.4;
-  font-family: inherit;
-  white-space: pre-wrap;
-  word-break: break-word;
-}
-.md-sym.md-heading {
-  color: #1e88e5;
-  font-weight: 600;
-}
-.md-code {
-  color: #6a1b9a;
-  background: rgba(106,27,154,0.06);
-  padding: 0 4px;
-  border-radius: 3px;
-}
-.md-sym.md-bold {
-  color: #e65100;
-  font-weight: 600;
-}
-.md-link {
-  color: #0b8043;
-}
-
-.footer {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 12px;
-  padding: 12px 16px;
-  border-top: 1px solid var(--color-border);
-  background: var(--color-surface);
-}
-
-.footer-left,
-.footer-center,
-.footer-right {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.footer-center {
-  flex: 1;
-  justify-content: center;
-}
-
-#wordCount {
-  font-weight: 500;
-}
-
-.shortcuts-hint {
-  font-size: 11px;
-  color: var(--color-meta);
-  margin-top: 4px;
-}
-
-/* Publish button styles and responsive top-right placement */
-#publishAndPush {
-  min-width: 120px;
-  padding: 8px 14px;
-  border-radius: 6px;
-}
-
-.header .actions {
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  gap: 8px;
-  align-items: center;
-}
-
-.btn-rounded {
-  border-radius: 8px;
-  padding: 6px 10px;
-  transition: box-shadow 120ms ease, transform 120ms ease;
-}
-
-@media (max-width: 640px) {
-  /* Small screens: keep publish button rectangular and positioned within header (no floating) */
-  .header .actions {
-    /* revert to absolute positioning used for larger screens so it stays in the header flow */
-    position: absolute;
-    right: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    z-index: 1300;
-    background: transparent;
-    padding: 0;
-    border-radius: 6px;
-  }
-
-  #publishAndPush {
-    /* restore rectangular appearance from desktop */
-    border-radius: 6px;
-    padding: 8px 14px;
-    box-shadow: none;
-    transition: box-shadow 160ms ease, transform 160ms ease;
-    min-width: 120px;
-  }
-  #publishAndPush:hover {
-    box-shadow: 0 2px 6px rgba(0,0,0,0.06);
-    transform: none;
-  }
-}
-
-/* Icon button base alignment (use with .icon-only) */
-.icon-only {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
-  line-height: 1;
-  padding: 0 6px;
-}
-
-/* PicGo test button character styling (removed when button deleted) */
-
-</style>
-<style>
-/* Image gallery at editor bottom */
-.image-gallery {
-  border-top: 1px dashed var(--color-border);
-  padding: 10px;
-  display: flex;
-  gap: 12px;
-  align-items: flex-start; /* allow items to align from top for consistent thumbnail grid */
-  flex-wrap: wrap; /* allow thumbnails to wrap to new rows instead of overflowing */
-  overflow-x: auto;
-  background: rgba(250,250,250,0.6);
-}
-.image-item {
-  display: inline-flex;
-  flex-direction: column;
-  gap: 6px;
-  align-items: center;
-  width: 120px;
-  flex: 0 0 auto;
-  text-align: center;
-  font-size: 12px;
-  color: var(--color-text-subtle);
-}
-.image-item img {
-  width: 100%;
-  height: 80px;
-  object-fit: cover;
-  border-radius: 6px;
-  border: 1px solid var(--color-border);
-  background: var(--color-code-bg);
-}
-.image-item .meta {
-  display: flex;
-  gap: 6px;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-.image-item .status {
-  font-size: 11px;
-  color: var(--color-meta);
-}
-.image-item .status.uploaded {
-  color: var(--color-success);
-}
-.image-item a {
-  color: inherit;
-  text-decoration: none;
-  /* override global anchor underline for image links */
-  border-bottom: none;
-}
-</style>
-<style>
-/* Inline interactive empty-state styles to ensure they win over common.css */
-.image-gallery {
-  transition: border-top-color 0.12s ease, background 0.12s ease,
-              min-height 260ms cubic-bezier(.2,.9,.2,1), padding 160ms ease, box-shadow 220ms ease;
-  position: relative; /* allow upload panel to be absolutely positioned (overlay) */
-  will-change: min-height, padding, box-shadow;
-}
-.image-gallery:hover {
-  border-top-color: var(--color-text-subtle);
-}
-.image-gallery.empty {
-  cursor: pointer;
-  padding: 6px 10px; /* small blank area before opening drawer */
-  justify-content: center;
-  min-height: 22px;
-  align-items: center;
-}
-.image-gallery .empty-placeholder {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  width: 100%;
-  padding: 8px 0;
-}
-.image-gallery.open .empty-placeholder {
-  display: flex;
-}
-.image-gallery.open .empty-placeholder {
-  display: flex;
-}
-.image-gallery.open.empty {
-  /* When the gallery is opened but contains no images, ensure the gallery
-     keeps a similar vertical footprint to the populated gallery so the
-     drawer does not appear visually collapsed. */
-  min-height: var(--dw-gallery-open-height, 180px);
-  padding: 10px 10px;
-  align-items: center;
-  justify-content: center;
-  /* subtle elevation on open to signal expansion */
-  box-shadow: none;
-}
-.image-gallery.open .empty-placeholder {
-  /* Make the placeholder occupy available height and center its contents. */
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-.image-gallery.open .empty-hint {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  color: var(--color-text-subtle);
-  font-size: 13px;
-  padding: 0;
-  box-sizing: border-box;
-}
-.image-gallery .empty-box {
-  width: 160px;
-  height: 100px;
-  border: 2px dashed var(--color-border);
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--color-text-subtle);
-  background: transparent;
-  transition: border-color 0.12s ease, color 0.12s ease, background 0.12s ease, transform 220ms cubic-bezier(.2,.9,.2,1);
-}
-.image-gallery .empty-box:hover {
-  border-color: var(--color-text-strong);
-  color: var(--color-text-strong);
-  background: rgba(0,0,0,0.02);
-  transform: translateY(-2px);
-}
-.image-gallery .add-symbol {
-  font-size: 36px;
-  line-height: 1;
-}
-.image-gallery .description {
-  margin-top: 12px;
-  color: var(--color-text-subtle);
-  font-size: 13px;
-}
-.image-gallery .upload-panel {
-  /* overlay drawer: positioned above the gallery without affecting layout */
-  display: flex;
-  width: 100%;
-  padding: 12px;
-  gap: 8px;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 100%;
-  background: rgba(255,255,255,0.98);
-  box-shadow: none;
-  border-top: none;
-  /* start hidden but present for transitions */
-  opacity: 0;
-  transform: translateY(12px) scaleY(.98);
-  pointer-events: none;
-  transition: transform 220ms cubic-bezier(.2,.9,.2,1), opacity 180ms ease;
-  transform-origin: bottom center;
-}
-.image-gallery .upload-panel #uploadStatus {
-  color: var(--color-text-subtle);
-  font-size: 13px;
-}
-.image-gallery.open .upload-panel {
-  opacity: 1;
-  transform: translateY(0) scaleY(1);
-  pointer-events: auto;
-}
-
-/* small trigger strip shown when empty and closed */
-.image-gallery .empty-trigger {
-  width: 100%;
-  height: 18px;
-  background: transparent;
-  transition: height 220ms cubic-bezier(.2,.9,.2,1);
-}
-</style>
-</style>
-<style>
-/* Image preview modal */
-.image-preview-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.7);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 2200;
-  cursor: zoom-out;
-}
-.image-preview-modal {
-  max-width: 95%;
-  max-height: 95%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.image-preview-modal img {
-  max-width: 100%;
-  max-height: 100%;
-  border-radius: 8px;
-  box-shadow: 0 10px 40px rgba(0,0,0,0.6);
-  background: #fff;
-}
-</style>
-</style>
+<link rel="stylesheet" href="css/editor.css" />
+<link rel="stylesheet" href="css/image-gallery.css" />
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <div style="display: flex; align-items: baseline; justify-content: space-between; gap: 14px;">
+      <div class="header-content">
         <div class="brand">
           <h1 class="title">New Dynamic</h1>
-          <p class="subtitle" id="fileHint">YYYY-MM-DD.md → src/content/posts/dynamic/journals/</p>
+          <p class="subtitle" id="fileHint">准备就绪</p>
         </div>
         <div class="actions" aria-hidden="false">
           <button id="publishAndPush" class="btn btn-primary lg" title="发表并推送" aria-label="发表并推送">发表并推送</button>
@@ -434,7 +24,7 @@
 
       <div class="card">
       <div class="card-top">
-        <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px;">
+        <div class="card-top-content">
           <div>
         <div class="hint" id="draftState">草稿：本地自动保存</div>
           </div>
