--- a/options.html
+++ b/options.html
@@ -3,140 +3,54 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Deepwhite 发布器设置</title>
+<title>Deepwhite 发布设置</title>
 <link rel="stylesheet" href="css/common.css" />
-<style>
-.field .hint {
-  margin-top: 4px;
-}
-
-#savedHint {
-  transition: color var(--transition-fast);
-}
-</style>
+<link rel="stylesheet" href="css/options.css" />
 </head>
 <body>
   <div class="container">
-    <div class="header">
+    <div class="header-placeholder"></div>
+    <div class="header" id="mainHeader">
       <div class="brand">
-        <h1 class="title">发布器设置</h1>
-        <p class="subtitle">博客仓库与内容路径</p>
+        <h1 class="title">发布设置</h1>
+        <p class="subtitle">网站仓库与内容路径</p>
       </div>
       <div class="actions">
         <button class="btn btn-primary" id="save">保存</button>
       </div>
     </div>
-    <div class="row" style="align-items:center;">
+
+    <!-- 1. 本地保存设置 -->
+    <div class="row row-center">
       <div class="field">
-        <div class="label">本地保存文件夹</div>
+        <div class="label">本地保存文件夹（根路径）</div>
         <div class="folder-row">
           <button class="btn btn-primary" id="pickFolder">选择文件夹</button>
           <div id="folderName" class="folder-path">未选择</div>
-          <button class="btn btn-danger" id="clearFolder">解除授权</button>
         </div>
-        <div class="hint">建议选择你的博客仓库根目录（例如 deepwhite-11ty），以便内容目录与 GitHub 路径完全一致。解除授权会移除当前授权并回到仅推送模式。</div>
-        
+        <div class="hint">建议选择博客仓库根目录，以便内容目录与 GitHub 路径完全一致。</div>
+        <div class="hint" id="targetDirSummaryRoot">本地根目录：未选择</div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="field">
-        <div class="label">远程仓库</div>
-        <input
-          class="input"
-          id="repoUrl"
-          placeholder="owner/repo 或 https://github.com/owner/repo"
-          autocomplete="off"
-          required
-        />
-        <div class="hint">仓库地址（支持 owner/repo、HTTPS URL 或 git@github.com:owner/repo.git）</div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="field">
-        <div class="label">仓库内内容目录（GitHub 路径）</div>
-        <input 
-          class="input" 
-          id="targetDir" 
-          placeholder="src/content/posts/dynamic/journals" 
-          autocomplete="off"
-          required
-        />
-        <div class="hint">GitHub 仓库中的相对路径（与远程推送一致），例如 src/content/posts/dynamic/journals。</div>
-        <div class="hint" id="targetDirSummaryRoot">本地根目录：未选择（仅用于远程推送）</div>
-        <div class="hint" id="targetDirSummaryFull">实际写入路径：-</div>
-        <!-- Inline suggestion banner will be injected or shown here when a local folder suggests a targetDir -->
-        <div id="targetSuggestion" style="display:none;"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="field important-toggle">
-        <div class="important-text">
-          <div class="important-label">同时推送到 GitHub</div>
-          <div class="hint">默认仅写入本地仓库；勾选后会使用 Token 调用 GitHub API 推送到远程。</div>
-        </div>
-        <label class="important-switch">
-          <input type="checkbox" id="pushToGithub" />
-          <span>启用</span>
-        </label>
-        <div id="pushControls" class="important-controls"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="field">
-        <div class="label">PicGo 上传（可选）</div>
-        <div class="hint">配置将用于图片粘贴时的自动上传。支持 PicGo HTTP 服务或 PicGo-Core。</div>
-        <input
-          class="input"
-          id="picgoEndpoint"
-          placeholder="http://localhost:36677/upload"
-          autocomplete="off"
-          type="url"
-        />
-        <div class="hint">PicGo 本地服务地址（HTTP API），示例：<code>http://localhost:36677/upload</code></div>
-
-        <label style="display:flex;align-items:center;gap:8px;margin-top:8px;">
-          <input type="checkbox" id="picgoAutoUpload" />
-          <span class="hint">粘贴图片时自动上传到 PicGo（关闭则提示选择）</span>
-        </label>
-
-        <div style="margin-top:8px;">
-          <div class="label">PicGo Token（可选）</div>
-          <input class="input" id="picgoToken" placeholder="PicGo Token（若配置）" autocomplete="off" type="password" />
-          <div class="hint">若 PicGo HTTP 服务启用了访问控制，可在此填写 token（仅保存在本地）。</div>
-        </div>
-        <div class="field" style="margin-top:8px;">
-          <div class="label">PicGo 上传格式</div>
-          <select class="input" id="picgoUploadFormat">
-            <option value="auto">自动（优先 multipart/form-data）</option>
-            <option value="json">JSON / Base64</option>
-          </select>
-          <div class="hint">若 PicGo 返回 “Not sending data in JSON format”，请选择 JSON / Base64。</div>
-        </div>
-        <div style="margin-top:10px; display:flex; align-items:center; gap:8px;">
-          <button class="btn" id="testPicgoBtn">测试 PicGo 连接</button>
-          <span id="testPicgoResult" class="hint" style="margin-left:6px;"></span>
-        </div>
-      </div>
-    </div>
-
-    <div style="margin-top:8px;">
-      <button id="advancedToggle" class="btn">高级设置</button>
-      <div id="advancedSection" style="display:none; margin-top:10px;">
+    <!-- 2. GitHub 推送设置 -->
+    <div class="section-spacing">
+      <div class="label section-label">GitHub 推送设置</div>
+      <div id="githubSection" class="subsection">
         <div class="row">
           <div class="field">
-            <div class="label">提交信息前缀</div>
-            <input 
-              class="input" 
-              id="commitPrefix" 
-              placeholder="dynamic:" 
+            <div class="label">远程仓库</div>
+            <input
+              class="input"
+              id="repoUrl"
+              placeholder="owner/repo 或 https://github.com/owner/repo"
               autocomplete="off"
             />
-            <div class="hint">用于生成提交信息（如 dynamic: YYYY-MM-DD.md），可留空。</div>
+            <div class="hint">仓库地址（支持 owner/repo、HTTPS URL 或 git@github.com:owner/repo.git）</div>
           </div>
+        </div>
+
+        <div class="row">
           <div class="field">
             <div class="label">分支</div>
             <input 
@@ -144,10 +58,27 @@
               id="branch" 
               placeholder="main" 
               autocomplete="off"
-              required
             />
-            <div class="hint">Git 分支名称（高级设置）</div>
+            <div class="hint">Git 分支名称</div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="field">
+            <div class="label">保存路径</div>
+            <input 
+              class="input" 
+              id="targetDir" 
+              placeholder="src/content/posts/dynamic/journals" 
+              autocomplete="off"
+            />
+            <div class="hint">本地和 GitHub 推送都会使用此路径。</div>
+            <div class="hint" id="targetDirSummaryFull">实际写入路径：-</div>
+            <div id="targetDirSuggestion" class="hidden"></div>
+          </div>
+        </div>
+
+        <div class="row">
           <div class="field">
             <div class="label">GitHub Token</div>
             <div class="token-wrapper">
@@ -159,24 +90,109 @@
                 type="password"
                 aria-label="GitHub Token"
               />
-              <!-- token visibility control removed -->
             </div>
-            <div class="hint">配合“同时推送到 GitHub”使用，填入 PAT。</div>
+            <div class="hint">用于调用 GitHub API 推送文件，需要 repo 权限。</div>
           </div>
-          <!-- PicGo settings moved to main settings area -->
         </div>
-        <div style="margin-top:8px;">
+
+        <div class="test-section">
           <button class="btn" id="testConnection">测试连接</button>
-          <span id="testResult" class="hint" style="margin-left:10px;"></span>
+          <span id="testResult" class="hint test-result"></span>
+        </div>
+
+        <div class="row">
+          <div class="field important-toggle">
+            <div class="important-text">
+              <div class="important-label">同时推送到 GitHub</div>
+              <div class="hint">默认仅写入本地；勾选后会使用 Token 调用 GitHub API 推送到远程。</div>
+            </div>
+            <label class="important-switch">
+              <input type="checkbox" id="pushToGithub" />
+              <span>启用</span>
+            </label>
+            <div id="pushControls" class="important-controls"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 3. 图片上传设置 -->
+    <div class="section-spacing">
+      <div class="label section-label">PicGo 图片上传设置</div>
+      <div id="picgoSection" class="subsection">
+        <div class="row">
+          <div class="field">
+            <div class="label">PicGo 服务地址</div>
+            <input
+              class="input"
+              id="picgoEndpoint"
+              placeholder="http://localhost:36677/upload"
+              autocomplete="off"
+              type="url"
+            />
+            <div class="hint">PicGo 本地服务地址（HTTP API），示例：<code>http://localhost:36677/upload</code></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="field">
+            <div class="label">PicGo Token（可选）</div>
+            <input 
+              class="input" 
+              id="picgoToken" 
+              placeholder="PicGo Token（若配置）" 
+              autocomplete="off" 
+              type="password" 
+            />
+            <div class="hint">若 PicGo HTTP 服务启用了访问控制，可在此填写 token（仅保存在本地）。</div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="field">
+            <div class="label">PicGo 上传格式</div>
+            <select class="input" id="picgoUploadFormat">
+              <option value="auto">自动（优先 multipart/form-data）</option>
+              <option value="json">JSON / Base64</option>
+            </select>
+            <div class="hint">若 PicGo 返回 "Not sending data in JSON format"，请选择 JSON / Base64。</div>
+          </div>
+        </div>
+
+
+
+        <div class="test-section">
+          <button class="btn" id="testPicgoBtn">测试 PicGo 连接</button>
+          <span id="testPicgoResult" class="hint test-result"></span>
+        </div>
+      </div>
+    </div>
+
+    <!-- 4. 高级设置（可折叠） -->
+    <div class="section-spacing-sm">
+      <button id="advancedToggle" class="btn">其他设置</button>
+      <div id="advancedSection" class="hidden subsection">
+        <div class="row">
+          <div class="field">
+            <div class="label">提交信息前缀</div>
+            <input 
+              class="input" 
+              id="commitPrefix" 
+              placeholder="dynamic:" 
+              autocomplete="off"
+            />
+            <div class="hint">用于生成提交信息（如 dynamic: YYYY-MM-DD.md），可留空。</div>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="footer">
       <div class="hint" id="savedHint"></div>
-      <div class="hint">表单与浮窗样式沿用 Deepwhite 设计系统。</div>
+      <div class="hint">复杂性是世界和任务的固有属性，设计者要学会"管理复杂"。</div>
     </div>
   </div>
+<script src="js/stickyHeader.js"></script>
 <script type="module" src="js/options.js"></script>
 </body>
 </html>
